--- a/src/id/noromax/build.gradle
+++ b/src/id/noromax/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'Noromax'
     extClass = '.Noromax'
     themePkg = 'mangathemesia'
-    baseUrl = 'https://noromax.my.id'
+    baseUrl = 'https://noromax01.my.id'
     overrideVersionCode = 0
     isNsfw = true
 }
