--- a/src/en/dynasty/AndroidManifest.xml
+++ b/src/en/dynasty/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <application>
+    <application android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".en.dynasty.DynastyUrlActivity"
             android:excludeFromRecents="true"
@@ -14,22 +14,13 @@
 
                 <data android:host="*.dynasty-scans.com" />
                 <data android:host="dynasty-scans.com" />
+                <data android:scheme="https" />
 
-                <data
-                    android:pathPattern="/anthologies/..*"
-                    android:scheme="https" />
-                <data
-                    android:pathPattern="/chapters/..*"
-                    android:scheme="https" />
-                <data
-                    android:pathPattern="/doujins/..*"
-                    android:scheme="https" />
-                <data
-                    android:pathPattern="/issues/..*"
-                    android:scheme="https" />
-                <data
-                    android:pathPattern="/series/..*"
-                    android:scheme="https" />
+                <data android:pathPattern="/anthologies/..*" />
+                <data android:pathPattern="/chapters/..*" />
+                <data android:pathPattern="/doujins/..*" />
+                <data android:pathPattern="/issues/..*" />
+                <data android:pathPattern="/series/..*" />
 
             </intent-filter>
         </activity>
