--- a/src/en/dynasty/build.gradle
+++ b/src/en/dynasty/build.gradle
@@ -1,7 +1,8 @@
 ext {
     extName = 'Dynasty'
-    extClass = '.DynastyFactory'
-    extVersionCode = 25
+    extClass = '.Dynasty'
+    extVersionCode = 26
+    isNsfw = true
 }
 
 apply from: "$rootDir/common.gradle"
