--- a/src/pt/gekkouscans/build.gradle
+++ b/src/pt/gekkouscans/build.gradle
@@ -2,9 +2,9 @@ ext {
     extName = 'Gekkou Scans'
     extClass = '.GekkouScans'
     themePkg = 'madara'
-    baseUrl = 'https://gekkou.space'
-    overrideVersionCode = 0
-    isNsfw = false
+    baseUrl = 'https://new.gekkou.space/'
+    overrideVersionCode = 1
+    isNsfw = true
 }
 
 apply from: "$rootDir/common.gradle"
