add other dynasty factories for legacy compatibility

--- a/src/en/dynasty/build.gradle
+++ b/src/en/dynasty/build.gradle
@@ -1,6 +1,6 @@
 ext {
     extName = 'Dynasty'
-    extClass = '.Dynasty'
+    extClass = '.DynastyFactory'
     extVersionCode = 26
     isNsfw = true
 }
