feat(pornpics): add i18n support

--- a/src/all/pornpics/build.gradle
+++ b/src/all/pornpics/build.gradle
@@ -9,4 +9,5 @@ apply from: "$rootDir/common.gradle"
 
 dependencies {
     implementation(project(":lib:randomua"))
+    implementation(project(':lib:i18n'))
 }
