--- a/src/en/dynasty/AndroidManifest.xml
+++ b/src/en/dynasty/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <application android:icon="@mipmap/ic_launcher">
+    <application>
         <activity
             android:name=".en.dynasty.DynastyUrlActivity"
             android:excludeFromRecents="true"
