--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 kotlin_version = "1.7.21"
 coroutines_version = "1.6.4"
 serialization_version = "1.4.0"
+decVersion = "0.1.2"
 
 [libraries]
 gradle-agp = { module = "com.android.tools.build:gradle", version = "8.6.1" }
@@ -23,6 +24,7 @@ rxjava = { module = "io.reactivex:rxjava", version = "1.3.8" }
 jsoup = { module = "org.jsoup:jsoup", version = "1.15.1" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version = "5.0.0-alpha.11" }
 quickjs = { module = "app.cash.quickjs:quickjs-android", version = "0.9.2" }
+dec = { group = "org.brotli", name = "dec", version.ref = "decVersion" }
 
 [bundles]
 common = ["kotlin-stdlib", "coroutines-core", "coroutines-android", "injekt-core", "rxjava", "kotlin-protobuf", "kotlin-json", "jsoup", "okhttp", "tachiyomi-lib", "quickjs"]
