--- a/src/id/westmanga/build.gradle
+++ b/src/id/westmanga/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'West Manga'
     extClass = '.WestManga'
     themePkg = 'mangathemesia'
-    baseUrl = 'https://westmanga.fun'
+    baseUrl = 'https://westmanga.me'
     overrideVersionCode = 5
     isNsfw = true
 }
