--- a/src/th/cat300/build.gradle
+++ b/src/th/cat300/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'Cat300'
     extClass = '.Cat300'
     themePkg = 'madara'
-    baseUrl = 'https://cat300.net'
+    baseUrl = 'https://cat-300.com'
     overrideVersionCode = 2
     isNsfw = true
 }
