--- a/src/en/tercoscans/build.gradle
+++ b/src/en/tercoscans/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'Terco Scans'
     extClass = '.TercoScans'
     themePkg = 'mangathemesia'
-    baseUrl = 'https://tecnoxcomics.xyz'
+    baseUrl = 'https://tecnocomic1.xyz'
     overrideVersionCode = 1
     isNsfw = false
 }
