--- a/src/ja/comictop/build.gradle
+++ b/src/ja/comictop/build.gradle
@@ -2,6 +2,7 @@ ext {
     extName = 'ComicTop'
     extClass = '.ComicTop'
     extVersionCode = 1
+    isNsfw = true
 }
 
 apply from: "$rootDir/common.gradle"
