Update PoseidonScans for the new site

--- a/src/fr/poseidonscans/build.gradle
+++ b/src/fr/poseidonscans/build.gradle
@@ -1,10 +1,10 @@
 ext {
     extName = 'Poseidon Scans'
     extClass = '.PoseidonScans'
-    themePkg = 'madara'
     baseUrl = 'https://poseidonscans.fr'
     overrideVersionCode = 0
-    isNsfw = true
+    extVersionCode = 43
+    isNsfw = false
 }
 
 apply from: "$rootDir/common.gradle"
