--- a/src/id/monzeekomik/build.gradle
+++ b/src/id/monzeekomik/build.gradle
@@ -2,8 +2,8 @@ ext {
     extName = 'Monzee Komik'
     extClass = '.MonzeeKomik'
     themePkg = 'mangathemesia'
-    baseUrl = 'https://monzeekomik.my.id'
-    overrideVersionCode = 0
+    baseUrl = 'https://monzee01.my.id'
+    overrideVersionCode = 1
     isNsfw = true
 }
 
