--- a/src/en/magusmanga/build.gradle
+++ b/src/en/magusmanga/build.gradle
@@ -1,9 +1,9 @@
 ext {
     extName = 'Magus Manga'
     extClass = '.MagusManga'
-    themePkg = 'keyoapp'
-    baseUrl = 'https://magustoon.com'
-    overrideVersionCode = 35
+    themePkg = 'iken'
+    baseUrl = 'https://magustoon.org'
+    overrideVersionCode = 44
     isNsfw = false
 }
 
