--- a/src/es/taurusfansub/build.gradle
+++ b/src/es/taurusfansub/build.gradle
@@ -2,8 +2,8 @@ ext {
     extName = 'Taurus Fansub'
     extClass = '.TaurusFansub'
     themePkg = 'madara'
-    baseUrl = 'https://lectortaurus.yopres.com'
-    overrideVersionCode = 4
+    baseUrl = 'https://lectortaurus2.yopres.com'
+    overrideVersionCode = 5
     isNsfw = false
 }
 
