--- a/src/ru/desu/build.gradle
+++ b/src/ru/desu/build.gradle
@@ -1,7 +1,8 @@
 ext {
     extName = 'Desu'
     extClass = '.Desu'
-    extVersionCode = 27
+    extVersionCode = 28
+    isNsfw = true
 }
 
 apply from: "$rootDir/common.gradle"
