--- a/src/vi/hentaicube/build.gradle
+++ b/src/vi/hentaicube/build.gradle
@@ -2,8 +2,8 @@ ext {
     extName = 'CBHentai'
     extClass = '.HentaiCB'
     themePkg = 'madara'
-    baseUrl = 'https://hentaicb.pics'
-    overrideVersionCode = 18
+    baseUrl = 'https://hentaicb.sbs'
+    overrideVersionCode = 19
     isNsfw = true
 }
 
