--- a/src/vi/sayhentai/build.gradle
+++ b/src/vi/sayhentai/build.gradle
@@ -2,8 +2,8 @@ ext {
     extName = "SayHentai"
     extClass = ".SayHentai"
     themePkg = "manhwaz"
-    baseUrl = "https://sayhentai.ink"
-    overrideVersionCode = 11
+    baseUrl = "https://sayhentaii.me"
+    overrideVersionCode = 12
     isNsfw = true
 }
 
