--- a/src/tr/merlinscans/build.gradle
+++ b/src/tr/merlinscans/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'Merlin Scans'
     extClass = '.MerlinScans'
     baseUrl = 'https://merlinscans.com'
-    overrideVersionCode = 2
+    extVersionCode = 2
     isNsfw = false
 }
 
