Fixed domain name for mangaonelove in build.gradle
Signed-off-by: Eugene Luckyanets <leugenea@gmail.com>

--- a/src/ru/mangaonelove/build.gradle
+++ b/src/ru/mangaonelove/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'Manga One Love'
     extClass = '.MangaOneLove'
     themePkg = 'madara'
-    baseUrl = 'https://mangaonelove.site'
+    baseUrl = 'https://mangaonelove.ru'
     overrideVersionCode = 2
     isNsfw = true
 }
