--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,14 @@
 [versions]
-kotlin_version = "1.7.21"
-coroutines_version = "1.6.4"
-serialization_version = "1.4.0"
+kotlin_version = "2.1.0"
+coroutines_version = "1.10.1"
+serialization_version = "1.8.0"
 
 [libraries]
-gradle-agp = { module = "com.android.tools.build:gradle", version = "8.6.1" }
+gradle-agp = { module = "com.android.tools.build:gradle", version = "8.10.1" }
 gradle-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin_version" }
 gradle-serialization = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin_version" }
-gradle-kotlinter = { module = "org.jmailen.gradle:kotlinter-gradle", version = "3.13.0" }
+
+spotless-gradle = { group = "com.diffplug.spotless", name = "spotless-plugin-gradle", version = "7.0.4" }
 
 tachiyomi-lib = { module = "com.github.keiyoushi:extensions-lib", version = "v1.4.2.1" }
 
@@ -20,8 +21,8 @@ coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-androi
 
 injekt-core = { module = "com.github.null2264.injekt:injekt-core", version = "4135455a2a" }
 rxjava = { module = "io.reactivex:rxjava", version = "1.3.8" }
-jsoup = { module = "org.jsoup:jsoup", version = "1.15.1" }
-okhttp = { module = "com.squareup.okhttp3:okhttp", version = "5.0.0-alpha.11" }
+jsoup = { module = "org.jsoup:jsoup", version = "1.19.1" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version = "5.0.0-alpha.14" }
 quickjs = { module = "app.cash.quickjs:quickjs-android", version = "0.9.2" }
 
 [bundles]
