Refactor RaijinScans extension: update to HttpSource and add LatestUpdatesDto class for new site

--- a/src/fr/raijinscans/build.gradle
+++ b/src/fr/raijinscans/build.gradle
@@ -1,9 +1,8 @@
 ext {
     extName = 'Raijin Scans'
     extClass = '.RaijinScans'
-    themePkg = 'madara'
     baseUrl = 'https://raijinscan.fr'
-    overrideVersionCode = 4
+    extVersionCode = 46
     isNsfw = false
 }
 
