--- a/src/tr/moondaisyscans/build.gradle
+++ b/src/tr/moondaisyscans/build.gradle
@@ -2,8 +2,8 @@ ext {
     extName = 'Moon Daisy Scans'
     extClass = '.MoonDaisyScans'
     themePkg = 'mangathemesia'
-    baseUrl = 'https://moondaisyscans.biz'
-    overrideVersionCode = 0
+    baseUrl = 'https://moondaisyscans.my'
+    overrideVersionCode = 1
     isNsfw = true
 }
 
