CosmicScansID: Update domain (#9292)
* Update build.gradle

CosmicScansID: Update domain

* Update CosmicScansID.kt

CosmicScansID: Update domain

* Update src/id/cosmicscansid/build.gradle

---------

Co-authored-by: AwkwardPeak7 <48650614+AwkwardPeak7@users.noreply.github.com>

--- a/src/id/cosmicscansid/build.gradle
+++ b/src/id/cosmicscansid/build.gradle
@@ -2,8 +2,8 @@ ext {
     extName = 'CosmicScans.id'
     extClass = '.CosmicScansID'
     themePkg = 'mangathemesia'
-    baseUrl = 'https://kmvs03.com'
-    overrideVersionCode = 8
+    baseUrl = 'https://lc.cosmicscans.asia'
+    overrideVersionCode = 9
     isNsfw = true
 }
 
