--- a/src/en/infernalvoidscans/build.gradle
+++ b/src/en/infernalvoidscans/build.gradle
@@ -2,8 +2,8 @@ ext {
     extName = 'Hive Scans'
     extClass = '.HiveScans'
     themePkg = 'iken'
-    baseUrl = 'https://hivecomic.com'
-    overrideVersionCode = 38
+    baseUrl = 'https://hivetoons.org'
+    overrideVersionCode = 39
     isNsfw = false
 }
 
