--- a/src/es/tresdaosscan/build.gradle
+++ b/src/es/tresdaosscan/build.gradle
@@ -2,8 +2,8 @@ ext {
     extName = 'Tres Daos Scan'
     extClass = '.TresDaosScan'
     themePkg = 'mangathemesia'
-    baseUrl = 'https://3daos.mewingzone.com'
-    overrideVersionCode = 9
+    baseUrl = 'https://threedaos.drublood.com'
+    overrideVersionCode = 10
     isNsfw = false
 }
 
