--- a/src/vi/nettruyenco/build.gradle
+++ b/src/vi/nettruyenco/build.gradle
@@ -2,8 +2,8 @@ ext {
     extName = 'NetTruyenCO (unoriginal)'
     extClass = '.NetTruyenCO'
     themePkg = 'wpcomics'
-    baseUrl = 'https://nettruyener.com'
-    overrideVersionCode = 5
+    baseUrl = 'https://nettruyenrr.com'
+    overrideVersionCode = 6
     isNsfw = false
 }
 
