--- a/src/id/mangatale/build.gradle
+++ b/src/id/mangatale/build.gradle
@@ -1,7 +1,7 @@
 ext {
     extName = 'Ikiru'
     extClass = '.Ikiru'
-    themePkg = 'mangathemesia'
+    themePkg = 'iken'
     baseUrl = 'https://id.ikiru.wtf'
     overrideVersionCode = 9
     isNsfw = true
