Switch url Fix #9602

--- a/src/fr/rimuscans/build.gradle
+++ b/src/fr/rimuscans/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'Rimu Scans'
     extClass = '.RimuScans'
     themePkg = 'mangathemesia'
-    baseUrl = 'https://rimuscans.fr'
+    baseUrl = 'https://rimuscans.com'
     overrideVersionCode = 1
     isNsfw = false
 }
