Add MMLook multisrc

--- a/src/zh/rumanhua/build.gradle
+++ b/src/zh/rumanhua/build.gradle
@@ -1,8 +1,9 @@
 ext {
     extName = 'Rumanhua'
     extClass = '.Rumanhua'
-    extVersionCode = 2
-    isNsfw = true
+    themePkg = 'mmlook'
+    baseUrl = 'https://m.rumanhua1.com'
+    overrideVersionCode = 2
 }
 
 apply from: "$rootDir/common.gradle"
