Little Tyrant: Remove `www.` from baseUrl

--- a/src/pt/littletyrant/build.gradle
+++ b/src/pt/littletyrant/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'Little Tyrant'
     extClass = '.LittleTyrant'
     themePkg = 'madara'
-    baseUrl = 'https://www.tiraninha.baby'
+    baseUrl = 'https://tiraninha.baby'
     overrideVersionCode = 1
     isNsfw = true
 }
