--- a/src/es/lectormonline/build.gradle
+++ b/src/es/lectormonline/build.gradle
@@ -1,6 +1,6 @@
 ext {
-    extName = 'Lector MOnline'
-    extClass = '.LectorMOnline'
+    extName = 'Lector MOnline / MangasX'
+    extClass = '.LectorMOnlineFactory                                                                               '
     extVersionCode = 1
     isNsfw = true
 }
