--- a/src/es/mangacrab/build.gradle
+++ b/src/es/mangacrab/build.gradle
@@ -2,8 +2,8 @@ ext {
     extName = 'Manga Crab'
     extClass = '.MangaCrab'
     themePkg = 'madara'
-    baseUrl = 'https://wikicrab.xyz'
-    overrideVersionCode = 12
+    baseUrl = 'https://mangacrab.topmanhuas.org'
+    overrideVersionCode = 13
     isNsfw = false
 }
 
