--- a/src/pt/argosscan/build.gradle
+++ b/src/pt/argosscan/build.gradle
@@ -1,7 +1,8 @@
 ext {
     extName = 'Argos Scan'
     extClass = '.ArgosScan'
-    extVersionCode = 26
+    extVersionCode = 27
+    isNsfw = false
 }
 
 apply from: "$rootDir/common.gradle"
