Renovate: try enabling AGP updates

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -16,6 +16,9 @@
     },
     {
       "matchManagers": ["gradle"],
+      "matchPackageNames": [
+        "!com.android.tools.build:gradle"
+      ],
       "enabled": false
     },
     {
