--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -5,7 +5,9 @@
   "schedule": ["on sunday"],
   "includePaths": [
     "buildSrc/gradle/**",
+    "buildSrc/*.gradle.kts",
     "gradle/**",
+    "*.gradle.kts",
     ".github/**"
   ],
   "ignoreDeps": ["keiyoushi/issue-moderator-action"],
@@ -16,9 +18,6 @@
     },
     {
       "matchManagers": ["gradle"],
-      "matchPackageNames": [
-        "!com.android.tools.build:gradle"
-      ],
       "enabled": false
     },
     {
