--- a/common.gradle
+++ b/common.gradle
@@ -82,7 +82,7 @@ android {
 
     // https://stackoverflow.com/a/77745844
     tasks.withType(com.android.build.gradle.tasks.PackageAndroidArtifact).configureEach {
-        doFirst { appMetadata.asFile.get().write('') }
+        doFirst { appMetadata.asFile.getOrNull()?.write('') }
     }
 
     compileOptions {
