--- a/src/all/niadd/build.gradle
+++ b/src/all/niadd/build.gradle
@@ -1,5 +1,6 @@
 ext {
     extName = 'Niadd'
+    pkgNameSuffix = 'all.niadd'
     extClass = '.NiaddFactory'
     extVersionCode = 1
     isNsfw = true
