--- a/.github/workflows/codeberg_mirror.yml
+++ b/.github/workflows/codeberg_mirror.yml
@@ -8,6 +8,8 @@ on:
   schedule:
     - cron: "0 */8 * * *"
 
+permissions: {}
+
 jobs:
   codeberg:
     if: "github.repository == 'keiyoushi/extensions-source'"
@@ -16,6 +18,7 @@ jobs:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           fetch-depth: 0
+          persist-credentials: false
       - uses: pixta-dev/repository-mirroring-action@674e65a7d483ca28dafaacba0d07351bdcc8bd75 # v1.1.1
         with:
           target_repo_url: "git@codeberg.org:keiyoushi/extensions-source.git"
