Name with some caps

--- a/src/fr/invinciblecomics/build.gradle
+++ b/src/fr/invinciblecomics/build.gradle
@@ -1,5 +1,5 @@
 ext {
-    extName = 'Invincible Comicsvf'
+    extName = 'Invincible ComicsVF'
     extClass = '.InvincibleComics'
     extVersionCode = 1
 }
