--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -10,6 +10,7 @@ on:
       - '!.github/**'
       - '.github/scripts/**'
       - '.github/workflows/build_push.yml'
+  workflow_dispatch:
 
 permissions: {}
 
