Format build.gradle for improved readability and organization

--- a/src/en/niadd/build.gradle
+++ b/src/en/niadd/build.gradle
@@ -1,14 +1,20 @@
 ext {
-    extName = 'Niadd' 
+    extName = 'Niadd'
     extClass = '.NiaddFactory'
-    extVersionCode = 1 
-    isNsfw = true 
+    extVersionCode = 1
+    isNsfw = true
 }
 
 apply from: "$rootDir/common.gradle"
+
+repositories {
+    google()
+    mavenCentral()
+    jcenter()
+}
+
 dependencies {
     implementation(project(":lib:cookieinterceptor"))
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation("me.marplex.cloudflarebypass:cloudflare-bypass:1.1")
 }
- 
