--- a/src/en/niadd/build.gradle
+++ b/src/en/niadd/build.gradle
@@ -10,4 +10,6 @@ apply from: "$rootDir/common.gradle"
 dependencies {
     implementation(project(":lib:cookieinterceptor"))
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation "androidx.appcompat:appcompat:1.6.1"
+
 }
