--- a/src/en/niadd/build.gradle
+++ b/src/en/niadd/build.gradle
@@ -7,9 +7,16 @@ ext {
 
 apply from: "$rootDir/common.gradle"
 
+def kotlin_version = "1.6.21"
+def coroutines_version = "1.6.1"
+
 dependencies {
     implementation(project(":lib:cookieinterceptor"))
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation "androidx.appcompat:appcompat:1.6.1"
 
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 }
