--- a/src/en/niadd/build.gradle
+++ b/src/en/niadd/build.gradle
@@ -1,22 +1,43 @@
-ext {
-    extName = 'Niadd' 
-    extClass = '.NiaddFactory'
-    extVersionCode = 1 
-    isNsfw = true 
+plugins {
+    id 'com.android.library'
+    id 'org.jetbrains.kotlin.android'
 }
 
-apply from: "$rootDir/common.gradle"
+android {
+    compileSdk 33
 
-def kotlin_version = "1.6.21"
-def coroutines_version = "1.6.1"
+    defaultConfig {
+        minSdk 21
+        targetSdk 33
+
+        versionCode 1
+        versionName "1.0"
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+
+ext {
+    extName = 'Niadd'
+    extClass = '.NiaddFactory'
+    isNsfw = true
+}
 
 dependencies {
-    implementation(project(":lib:cookieinterceptor"))
-    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation project(":lib:cookieinterceptor")
+    implementation "com.google.code.gson:gson:2.10.1"
     implementation "androidx.appcompat:appcompat:1.6.1"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.21"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
 }
