--- a/src/en/niadd/build.gradle
+++ b/src/en/niadd/build.gradle
@@ -11,10 +11,34 @@ repositories {
     google()
     mavenCentral()
     jcenter()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
     implementation(project(":lib:cookieinterceptor"))
+    
     implementation 'com.google.code.gson:gson:2.10.1'
-    implementation("me.marplex.cloudflarebypass:cloudflare-bypass:1.1")
+    
+    implementation("com.github.darkryh:Cloudflare-Bypass:1.0.0")
+    
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.10.0'
+}
+
+android {
+    compileSdk 34
+    defaultConfig {
+        minSdk 21
+        targetSdk 34
+        versionCode extVersionCode
+        versionName "1.0"
+    }
+
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
 }
