fix(YellowNote): properly adapt to new languages
- Implement correct language adaptation
- Add settings for language selection, defaulting to system language if unset
- Use English for unsupported languages
- Fix incorrect formatMediaCount extraction

--- a/src/all/yellownote/build.gradle
+++ b/src/all/yellownote/build.gradle
@@ -1,6 +1,6 @@
 ext {
     extName = 'YellowNote'
-    extClass = '.YellowNoteSourceFactory'
+    extClass = '.YellowNote'
     extVersionCode = 2
     isNsfw = true
 }
