--- a/src/pt/fenixmanhwas/build.gradle
+++ b/src/pt/fenixmanhwas/build.gradle
@@ -1,9 +1,7 @@
 ext {
     extName = 'Fênix Manhwas'
     extClass = '.FenixManhwas'
-    themePkg = 'madara'
-    baseUrl = 'https://fenixscan.xyz'
-    overrideVersionCode = 2
+    extVersionCode = 43
     isNsfw = false
 }
 
