--- a/src/tr/uzaymanga/AndroidManifest.xml
+++ b/src/tr/uzaymanga/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
     <application>
         <activity
-            android:name=".tr.uzaymanga.UzayMangaUrlActivity"
+            android:name="eu.kanade.tachiyomi.extension.tr.uzaymanga.UzayMangaUrlActivity"
             android:excludeFromRecents="true"
             android:exported="true"
             android:theme="@android:style/Theme.NoDisplay">
@@ -11,10 +12,19 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-
                 <data
                     android:host="uzaymanga.com"
-                    android:pathPattern="/manga/..*"
+                    android:pathPattern="/.*/..*"
+                    android:scheme="https" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:host="uzaymanga.com"
+                    android:pathPattern="/..*"
                     android:scheme="https" />
             </intent-filter>
         </activity>
