--- a/src/tr/uzaymanga/build.gradle
+++ b/src/tr/uzaymanga/build.gradle
@@ -1,7 +1,8 @@
 ext {
     extName = 'Uzay Manga'
     extClass = '.UzayManga'
-    extVersionCode = 38
+    extVersionCode = 39
+    isNsfw = false
 }
 
 apply from: "$rootDir/common.gradle"
