--- a/src/ar/mangapro/build.gradle
+++ b/src/ar/mangapro/build.gradle
@@ -1,9 +1,9 @@
 ext {
     extName = 'Manga Pro'
     extClass = '.MangaPro'
-    themePkg = 'iken'
+    themePkg = 'other'
     baseUrl = 'https://promanga.net'
-    overrideVersionCode = 29
+    overrideVersionCode = 30
     isNsfw = false
 }
 
