--- a/src/ar/mangapro/build.gradle
+++ b/src/ar/mangapro/build.gradle
@@ -1,6 +1,7 @@
 ext {
     extName = 'Manga Pro'
     extClass = '.MangaPro'
+    themePkg = 'iken'
     baseUrl = 'https://promanga.net'
     extVersionCode = 30
     isNsfw = false
