--- a/src/it/mangaworld/build.gradle
+++ b/src/it/mangaworld/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'Mangaworld'
     extClass = '.Mangaworld'
     themePkg = 'mangaworld'
-    baseUrl = 'https://www.mangaworld.cx'
+    baseUrl = 'https://www.mangaworld.ac'
     overrideVersionCode = 8
     isNsfw = false
 }
