--- a/src/pt/lertoons/build.gradle
+++ b/src/pt/lertoons/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'Ler Toons'
     extClass = '.LerToons'
     themePkg = 'zerotheme'
-    baseUrl = 'https://lertoons.com'
+    baseUrl = 'https://www.unionmangas.com'
     overrideVersionCode = 0
     isNsfw = true
 }
