--- a/src/en/azuki/build.gradle
+++ b/src/en/azuki/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'Azuki'
     extClass = '.Azuki'
     extVersionCode = 1
-    isNsfw = false
+    isNsfw = true
 }
 
 apply from: "$rootDir/common.gradle"
