--- a/src/ja/mangagun/build.gradle
+++ b/src/ja/mangagun/build.gradle
@@ -2,8 +2,8 @@ ext {
     extName = 'MangaGun'
     extClass = '.MangaGun'
     themePkg = 'fmreader'
-    baseUrl = 'https://mangagun.net'
-    overrideVersionCode = 4
+    baseUrl = 'https://nihonkuni.com'
+    overrideVersionCode = 5
     isNsfw = true
 }
 
