Pluto Scans: Bump versionCode

--- a/src/en/plutoscans/build.gradle
+++ b/src/en/plutoscans/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'Pluto Scans'
     extClass = '.PlutoScans'
     themePkg = 'madara'
-    baseUrl = 'https://plutoscans.com'
+    baseUrl = 'https://flamescans.lol'
     overrideVersionCode = 1
     isNsfw = false
 }
