Update extension name

--- a/src/ja/mangagun/build.gradle
+++ b/src/ja/mangagun/build.gradle
@@ -1,5 +1,5 @@
 ext {
-    extName = 'MangaGun'
+    extName = 'NihonKuni'
     extClass = '.MangaGun'
     themePkg = 'fmreader'
     baseUrl = 'https://nihonkuni.com'
