--- a/src/ar/arabtoons/build.gradle
+++ b/src/ar/arabtoons/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'Arab Toons'
     extClass = '.ArabToons'
     themePkg = 'madara'
-    baseUrl = 'https://arabtoons.me'
+    baseUrl = 'https://arabtoons.net'
     overrideVersionCode = 1
     isNsfw = true
 }
