--- a/src/pt/sakuramangas/build.gradle
+++ b/src/pt/sakuramangas/build.gradle
@@ -8,5 +8,6 @@ ext {
 apply from: "$rootDir/common.gradle"
 
 dependencies {
-    implementation(project(":lib:synchrony"))
+    implementation project(":lib:synchrony")
+    implementation project(':lib:randomua')
 }
