--- a/src/en/rezoscans/build.gradle
+++ b/src/en/rezoscans/build.gradle
@@ -2,8 +2,8 @@ ext {
     extName = 'Rezo Scans'
     extClass = '.RezoScans'
     themePkg = 'keyoapp'
-    baseUrl = 'https://rezoscans.com'
-    overrideVersionCode = 3
+    baseUrl = 'https://rezoscans.org'
+    overrideVersionCode = 4
     isNsfw = false
 }
 
