--- a/src/en/rezoscans/build.gradle
+++ b/src/en/rezoscans/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'Rezo Scans'
     extClass = '.RezoScans'
     themePkg = 'keyoapp'
-    baseUrl = 'https://rezoscans.org'
+    baseUrl = 'https://rezoscan.org'
     overrideVersionCode = 4
     isNsfw = false
 }
