--- a/src/pt/sakuramangas/build.gradle
+++ b/src/pt/sakuramangas/build.gradle
@@ -1,12 +1,13 @@
 ext {
     extName = 'Sakura Mangás'
     extClass = '.SakuraMangas'
-    extVersionCode = 2
+    extVersionCode = 3
     isNsfw = true
 }
 
 apply from: "$rootDir/common.gradle"
 
 dependencies {
-    implementation(project(":lib:synchrony"))
+    implementation project(":lib:synchrony")
+    implementation project(':lib:randomua')
 }
