--- a/src/en/yakshacomics/build.gradle
+++ b/src/en/yakshacomics/build.gradle
@@ -3,8 +3,8 @@ ext {
     extClass = '.YakshaComics'
     themePkg = 'madara'
     baseUrl = 'https://yakshacomics.com'
-    overrideVersionCode = 1
-    isNsfw = true
+    overrideVersionCode = 0
+    isNsfw = false
 }
 
 apply from: "$rootDir/common.gradle"
