--- a/src/pt/lertoons/build.gradle
+++ b/src/pt/lertoons/build.gradle
@@ -2,7 +2,7 @@ ext {
     extName = 'Ler Toons'
     extClass = '.LerToons'
     themePkg = 'zerotheme'
-    baseUrl = 'https://www.readmangas.org'
+    baseUrl = 'https://lertoons.com/'
     overrideVersionCode = 1
     isNsfw = true
 }
