--- a/src/ja/firecross/build.gradle
+++ b/src/ja/firecross/build.gradle
@@ -1,10 +1,12 @@
 ext {
     extName = "FireCross"
     extClass = ".FireCross"
-    themePkg = 'clipstudioreader'
-    baseUrl = 'https://firecross.jp'
-    overrideVersionCode = 0
+    extVersionCode = 1
     isNsfw = false
 }
 
 apply from: "$rootDir/common.gradle"
+
+dependencies {
+    implementation(project(":lib:clipstudioreader"))
+}
