Migrate BigSolo to ScanR multi-source
Uses the ScanR multi-source template for the extension

--- a/src/fr/bigsolo/build.gradle
+++ b/src/fr/bigsolo/build.gradle
@@ -1,7 +1,9 @@
 ext {
     extName = 'BigSolo'
     extClass = '.BigSolo'
-    extVersionCode = 1
+    themePkg = 'scanr'
+    baseUrl = 'https://www.bigsolo.org'
+    overrideVersionCode = 1
     isNsfw = false
 }
 
