update icon and www. domain in manifest

--- a/src/all/qtoon/AndroidManifest.xml
+++ b/src/all/qtoon/AndroidManifest.xml
@@ -13,6 +13,7 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data android:host="qtoon.com" />
+                <data android:host="www.qtoon.com" />
                 <data android:scheme="https" />
 
                 <data android:pathPattern="/detail/..*" />
